inserita parte grafica HTML problema "prompt" che blocca aggiornamento pagina HTML

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ span {
     font-weight: bold;
     width: 30px;
     height: 30px;
-    padding: 5px;
+    padding-top: 5px;
     text-align: center;
 }
 
